@@ -1474,10 +1474,10 @@ val parse_ctr_arg =
   (Parse.typ >> pair Binding.empty);
 
 val parse_ctr_specs =
-  Parse.enum1 "|" (parse_ctr_spec parse_binding parse_ctr_arg -- Parse.opt_mixfix);
+  Parse.enum1 "|" (parse_ctr_spec Parse.binding parse_ctr_arg -- Parse.opt_mixfix);
 
 val parse_spec =
-  parse_type_args_named_constrained -- parse_binding -- parse_map_rel_bindings --
+  parse_type_args_named_constrained -- Parse.binding -- parse_map_rel_bindings --
   Parse.opt_mixfix -- (@{keyword "="} |-- parse_ctr_specs);
 
 val parse_co_datatype = parse_ctr_options -- Parse.and_list1 parse_spec;
